<resources>

    <string name="app_name">TestMyFaith</string>

    <string name="action_settings">Settings</string>

    <string name="titleStr">Categories</string>

    <string name="songsStr">Songs</string>

    <string name="moviesStr">Movies</string>

    <string name="bibleStr">Bible</string>

    <string name="childrenStr">Children</string>

    <string name="choice">Please choose a subtopic...</string>

    <string name="orgStr">Original Songs</string>

    <string name="sojStr">Sing Out Joyfully</string>

    <string name="childStr">Childrens Songs</string>

    <string name="title_activity_songs_sub_topics">SongsSubTopics</string>

    <string name="title_activity_quiz">QuizActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>