<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_activity"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context=".SongsSubTopics"

    android:background="#000000">


    <TextView

        android:id="@+id/category_lbl"

        android:layout_width="match_parent"

        android:layout_height="45dp"

        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"

        android:layout_marginTop="27dp"

        android:text="Songs"

        android:textAlignment="center"
        android:textColor="@color/whiteAccent"
        android:textSize="30sp"
        tools:fontFamily="@font/arbutus"
        android:layout_alignParentLeft="true" />


    <Button

        android:id="@+id/org_lbl"

        android:layout_width="300dp"

        android:layout_height="62dp"

        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"

        android:layout_marginStart="2dp"

        android:layout_marginLeft="2dp"

        android:layout_marginTop="155dp"
        android:background="@drawable/purple_gradient"

        android:text="@string/orgStr"
        android:textColor="@color/whiteAccent"
        tools:fontFamily="@font/arbutus" />


    <Button

        android:id="@+id/soj_lbl"

        android:layout_width="286dp"

        android:layout_height="64dp"

        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/purple_gradient"
        android:text="@string/sojStr"
        android:textColor="@color/whiteAccent"
        tools:fontFamily="@font/arbutus" />


    <Button

        android:id="@+id/child_lbl"

        android:layout_width="283dp"

        android:layout_height="67dp"

        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="397dp"

        android:background="@drawable/purple_gradient"
        android:text="@string/childStr"
        android:textColor="@color/whiteAccent"
        tools:fontFamily="@font/arbutus" />



</RelativeLayout>