<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context=".CategoryMain"

    tools:showIn="@layout/activity_category_main"

    android:background="@color/blackAccent">

    <Button

        android:id="@+id/movie_lbl"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_alignTop="@+id/song_lbl"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-297dp"
        android:layout_marginLeft="-297dp"
        android:layout_marginTop="-136dp"
        android:layout_toEndOf="@+id/song_lbl"
        android:layout_toRightOf="@+id/song_lbl"
        android:background="@drawable/light_blue_gradient"
        android:text="@string/moviesStr"
        android:textAlignment="center"
        android:textColor="@color/whiteAccent"
        android:textSize="20sp"
        android:drawableLeft="@drawable/movies"
        android:drawableTint="@color/whiteAccent"
        tools:fontFamily="@font/arbutus" />



    <Button
        android:id="@+id/children_lbl"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_alignStart="@+id/movie_lbl"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="273dp"
        android:gravity="center"
        android:background="@drawable/orange_gradient"
        android:text="@string/childrenStr"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:textColor="@color/whiteAccent"
        android:textSize="20sp"
        android:drawableRight="@drawable/children"
        android:drawableTint="@color/whiteAccent"
        tools:fontFamily="@font/arbutus"
        android:layout_alignLeft="@+id/movie_lbl"
        android:layout_marginLeft="77dp" />


    <Button

        android:id="@+id/the_bible_lbl"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_alignTop="@+id/children_lbl"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-214dp"
        android:layout_marginLeft="-214dp"
        android:layout_marginTop="132dp"
        android:layout_toEndOf="@+id/song_lbl"
        android:layout_toRightOf="@+id/song_lbl"
        android:background="@drawable/instagram_gradient"
        android:text="@string/bibleStr"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:textAllCaps="false"
        android:textColor="@color/whiteAccent"
        android:textSize="20sp"
        android:drawableRight="@drawable/bible"
        android:drawableTint="@color/whiteAccent"
        tools:fontFamily="@font/arbutus" />

    <Button
        android:id="@+id/song_lbl"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:paddingTop="10dp"
        android:layout_marginTop="303dp"
        android:background="@drawable/purple_gradient"
        android:drawableLeft="@drawable/music"
        android:drawableTint="@color/whiteAccent"
        android:text="@string/songsStr"
        android:textAlignment="center"
        android:textColor="@color/blackAccent"
        android:textSize="20sp"
        tools:fontFamily="@font/arbutus" />


    <Button
        android:id="@+id/oragnization_btn"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/orange_yellow_gradient"
        android:drawableRight="@drawable/history"
        android:drawableTint="@color/whiteAccent"
        android:lineSpacingExtra="10sp"
        android:paddingTop="10dp"
        android:text="Organization"
        android:textAlignment="center"
        android:textColor="@color/whiteAccent"
        android:textSize="20sp"
        tools:fontFamily="@font/arbutus" />

    <Button
        android:id="@+id/broadcast_btn"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_below="@+id/oragnization_btn"
        android:layout_alignEnd="@+id/oragnization_btn"
        android:layout_alignRight="@+id/oragnization_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-132dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:paddingTop="10dp"
        android:text="Broadcast"
        android:textAlignment="center"
        android:textColor="@color/whiteAccent"
        android:background="@drawable/green_gradient"
        android:drawableTint="@color/whiteAccent"
        android:textSize="20sp"
        android:drawableLeft="@drawable/tv"
        tools:fontFamily="@font/arbutus" />

    <TextView
        android:id="@+id/categories_txt"
        android:layout_width="231dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="-107dp"
        android:layout_marginRight="-107dp"
        android:fontFamily="@font/arbutus"
        android:text="Categories"
        android:textColor="@color/whiteAccent"
        android:textSize="35sp" />



</RelativeLayout>